<resources>
    <string name="app_name">Atomic Aerobic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="testing">Testing</string>
    <string name="blockout_times">Blockout Times</string>
    <string name="add_a_blockout_time">Add a Blockout Time</string>
    <string name="done">Done</string>
    <string name="space" />
    <string name="username">Username</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="intervals_left">intervals left</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="times">Times</string>
    <string name="workout_types">Workout Types</string>
    <string name="randomization">Randomization</string>
    <string name="randomization_description">Yes, I would like the intervals to be randomized.</string>
    <string name="arms">Arms</string>
    <string name="legs">Legs</string>
    <string name="core">Core</string>
    <string name="cardio">Cardio</string>
    <string name="total_time">Total Time (minutes):</string>
    <string name="time_per_session">Time per session:</string>
    <string-array name="time_units">
        <item name="seconds">seconds</item>
        <item name="minutes">minutes</item>
	</string-array>
    <string name="start_time">"Start Time: "</string>
    <string name="end_time">"End Time:   "</string>
    <string name="keep_up_the_good_work">Keep up the good work!</string>
    <string name="get_started">Get Started</string>
    <string-array name="time_array">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="blockout_time_delete_dialog">Are you sure you want to delete this blockout time?</string>
</resources>
