<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:padding="20dp"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/log_in_title"
            style="@style/TitleStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

        <EditText
            android:id="@+id/log_in_username"
            style="@style/EditTextStyling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/log_in_password"
            style="@style/EditTextStyling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dont_have_an_account_text_view"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account" />

            <TextView
                android:id="@+id/log_in_sign_up_link_text_view"
                style="@style/SmallLinkStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/sign_up" />
        </LinearLayout>

    </LinearLayout>


    <Button
        style="@style/ButtonStyling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/log_in" />


</RelativeLayout>