<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.rosehulman.bockkedummitrj.atomicaerobic.ui.home.SettingsFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="edu.rosehulman.bockkedummitrj.atomicaerobic.ui.dashboard.DashboardFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.rosehulman.bockkedummitrj.atomicaerobic.ui.notifications.BlockoutTimesFragment"
        android:label="@string/blockout_times"
        tools:layout="@layout/fragment_blockout_times_list" />
</navigation>