<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:padding="20dp">

    <TextView
        android:id="@+id/settings_title"
        style="@style/TitleStyling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:text="@string/settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_title"
        android:orientation="vertical">

        <!--       Times-->
        <TextView
            android:id="@+id/setting_times_title"
            style="@style/SubHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/times" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_time_description"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/total_time" />

            <EditText
                android:id="@+id/total_time_edit_text"
                style="@style/SmallEditTextStyling"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:inputType="number"
                android:maxLength="3"
                android:text="60" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/time_per_session_description"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/time_per_session" />

            <EditText
                android:id="@+id/time_per_session_edit_text"
                style="@style/SmallEditTextStyling"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:inputType="number"
                android:maxLength="3"
                android:text="30" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/time_per_session_spinner"
                style="@style/SpinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:entries="@array/time_units" />
        </RelativeLayout>


        <!--        Types-->
        <TextView
            android:id="@+id/setting_workout_types_title"
            style="@style/SubHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/workout_types" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/workout_type_arms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/arms_description"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arms" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/workout_type_legs_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/legs_description"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/workout_type_core_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/core_description"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/core" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/workout_type_cardio_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cardio_description"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardio" />
        </LinearLayout>

        <!--    Randomization-->
        <TextView
            android:id="@+id/setting_randomization_title"
            style="@style/SubHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/randomization" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/randomization_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/randomization_description"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/randomization_description" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>