<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        style="@style/TitleStyling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blockout_times" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/blockout_times_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/blockout_times_add_button"
                style="@style/ButtonStyling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_blockout_time"
                android:layout_alignParentLeft="true"/>


            <Button
                android:id="@+id/blockout_times_list_done_button"
                style="@style/ButtonStyling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>